fixed overflow issue on notes-card

--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -81,7 +81,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 8px;
     border-radius: 3px;
     overflow: hidden;
     cursor: pointer;
@@ -99,7 +98,9 @@ div.notes-card:hover {
 .notes-content {
     font-size: 13px;
     color: gray;
-    padding: 8px;
+    padding: 0 8px;
+    overflow: hidden;
+    height: 60px;
 }
 
 .edit-column-notes {
@@ -262,6 +263,7 @@ span:hover {
     align-items: center;
     gap: 10px;
     padding: 5px;
+    box-shadow: -3px 0 4px white;
 }
 
 .tag-icons-container {
@@ -306,6 +308,10 @@ span:hover {
 .icon-a {
     font-size: 16px;
     z-index: 10;
+}
+
+.icon-a:hover {
+    color: #209CEE;
 }
 
 .icon-b {
